--- a/app/src/main/res/layout/activity_call_search.xml
+++ b/app/src/main/res/layout/activity_call_search.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_call_search"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
-    tools:context="com.example.tacademy.callfinder.MainActivity">
+    tools:context="com.example.tacademy.callfinder.ui.act.CallSearchActivity">
 
     <!-- 전번 검색바 -->
     <include
@@ -18,4 +17,11 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"/>
 
+    <include
+        layout="@layout/include_call_search_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 </LinearLayout>
