--- a/app/src/main/res/layout/activity_call_search.xml
+++ b/app/src/main/res/layout/activity_call_search.xml
@@ -20,8 +20,5 @@
     <include
         layout="@layout/include_call_search_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_height="match_parent"/>
 </LinearLayout>
